# VibeSafe

./: .gitignore  README.md  pyproject.toml
.github/: DESCRIPTION.txt
docs/: QUICKSTART_KIND.md  RHACS_KIND.md  SPIRE_SETUP.md
tests/: sample_vibe_code.py
tests/mypkg/: main.py  utils.py
vibe/: __init__.py  analyzer.py  builder.py  cli.py  deployer.py  generator.py  scanner.py
vibe/templates/: configmap.yaml.j2  netpol.yaml.j2  pod-image.yaml.j2  pod.yaml.j2  vap.yaml.j2  vap_binding.yaml.j2
